--- a/src/profile/_navigation.scss
+++ b/src/profile/_navigation.scss
@@ -1,20 +1,55 @@
 // Navigation menu styles
 #content .sidebar {
+  float: left !important;
+  width: 20% !important;
+
+  @media (max-width: 1000px) {
+    @include flex-layout(row, start, start);
+    float: none !important;
+    width: 100% !important;
+  }
+
   .profile-nav {
     background-color: transparent !important;
+
+    &::before {
+      display: none !important;
+    }
+
+    @media (max-width: 1000px) {
+      @include flex-layout(row, start, start);
+      gap: 5px !important;
+    }
   }
+
   // Base link styles
   a {
     color: $white !important;
     background: $deepgray !important;
     text-decoration: none !important;
 
+    @media (max-width: 1000px) {
+      @include flex-layout();
+      padding: 0 !important;
+      width: 35px !important;
+      height: 35px !important;
+      border-radius: 5px !important;
+    }
+
     .icon-icomoon {
       color: $white !important;
+
+      @media (max-width: 1000px) {
+        margin: 0 !important;
+      }
     }
 
     span {
       color: $white !important;
+
+      @media (max-width: 1000px) {
+        display: none !important;
+      }
     }
 
     &:hover,
