--- a/src/profile/_root.scss
+++ b/src/profile/_root.scss
@@ -154,12 +154,16 @@
 
   // Scroll to top button styles
   .scroll-to-top {
-    background-color: $deepgray !important;
+    background-color: $black !important;
     color: $white !important;
+    margin-top: 45px !important;
+
+    @media (max-width: 1000px) {
+      margin-top: 100px !important;
+    }
 
     &:hover {
       background-color: $deepgray !important;
-      opacity: 0.8 !important;
     }
   }
 
