Update background color in toplist.scss to transparent

--- a/src/toplist.scss
+++ b/src/toplist.scss
@@ -325,7 +325,7 @@
             justify-content: start !important;
             align-items: center !important;
             width: fit-content !important;
-            background-color: darken($darkgray, 2%) !important;
+            background-color: transparent !important;
             border: none !important;
             height: 100% !important;
             margin: 0 !important;
