--- a/src/profile/_achievements.scss
+++ b/src/profile/_achievements.scss
@@ -75,7 +75,7 @@
           color: $white !important;
         }
         .icon-icomoon.done {
-          color: gold !important;
+          color: $yellow !important;
         }
       }
     }
