--- a/src/loading.scss
+++ b/src/loading.scss
@@ -2,7 +2,7 @@
 
 // Configuration
 $size: 50;
-$color: #ff8c00;
+$color: $orange;
 $lines: 8;
 $margin: 10; // Distance from corners (makes lines shorter)
 
@@ -13,7 +13,6 @@ $center: $size / 2;
 
 // Generate SVG content
 @function create-spinner-svg() {
-  $encoded-color: '%23' + str-slice(inspect($color), 2); // Remove # and add %23
   $svg-start: '%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 #{$size} #{$size}%27%3E%3Cg transform-origin=%27#{$center} #{$center}%27%3E';
   $svg-end: '%3C/g%3E%3C/svg%3E';
   $lines-svg: '';
@@ -29,7 +28,7 @@ $center: $size / 2;
     $x2: if($i % 2 == 1, $end, $start);
     $y2: $end;
     
-    $line: '%3Cline x1=%27#{$x1}%27 y1=%27#{$y1}%27 x2=%27#{$x2}%27 y2=%27#{$y2}%27 stroke=%27#{$encoded-color}%27 stroke-width=%272%27 opacity=%27#{$opacity}%27%3E%3CanimateTransform attributeName=%27transform%27 type=%27rotate%27 values=%270 #{$center} #{$center};360 #{$center} #{$center}%27 dur=%27#{$rotate-duration}s%27 repeatCount=%27indefinite%27/%3E%3Canimate attributeName=%27opacity%27 values=%27#{$opacity};0.5;#{$opacity}%27 dur=%27#{$opacity-duration}s%27 repeatCount=%27indefinite%27/%3E%3C/line%3E';
+    $line: '%3Cline x1=%27#{$x1}%27 y1=%27#{$y1}%27 x2=%27#{$x2}%27 y2=%27#{$y2}%27 stroke=%27#{$color}%27 stroke-width=%272%27 opacity=%27#{$opacity}%27%3E%3CanimateTransform attributeName=%27transform%27 type=%27rotate%27 values=%270 #{$center} #{$center};360 #{$center} #{$center}%27 dur=%27#{$rotate-duration}s%27 repeatCount=%27indefinite%27/%3E%3Canimate attributeName=%27opacity%27 values=%27#{$opacity};0.5;#{$opacity}%27 dur=%27#{$opacity-duration}s%27 repeatCount=%27indefinite%27/%3E%3C/line%3E';
     
     $lines-svg: $lines-svg + $line;
   }
