--- a/src/login.scss
+++ b/src/login.scss
@@ -59,7 +59,7 @@
   display: flex;
   justify-content: center !important;
   align-items: center !important;
-  background-color: rgba(0, 0, 0, 0.5) !important;
+  background-color: rgba($black, 0.8) !important;
 
   table {
     tbody {
