--- a/src/profile/_friends.scss
+++ b/src/profile/_friends.scss
@@ -7,7 +7,7 @@
         border-bottom: 1px solid transparent !important;
 
         &:hover {
-          background: rgba(0, 0, 0, 0.1) !important;
+          background: rgba($black, 0.1) !important;
           border-bottom: 1px solid $lightblue !important;
         }
       }
