--- a/src/userPanel/userPanel.scss
+++ b/src/userPanel/userPanel.scss
@@ -193,8 +193,7 @@ $buttonHeight: 44px;
     margin: 0 !important;
     height: $buttonHeight !important;
     width: $buttonWidth !important;
-    color: #ffff00 !important;
-    text-shadow: 0 0 3px #5f5f00 !important;
+    color: $yellow !important;
     z-index: 2 !important;
     font-weight: 500 !important;
     font-size: 14px !important;
@@ -282,11 +281,11 @@ $buttonHeight: 44px;
   }
 
   #userpanel-scores {
-    color: gold !important;
+    color: $yellow !important;
   }
 
   #userpanel-bonuses {
-    color: lightblue !important;
+    color: lighten($lightblue, 15%) !important;
   }
 
   .title,
