layout.scss independent from media queries folder

--- a/src/main.scss
+++ b/src/main.scss
@@ -76,7 +76,7 @@
 // -----------------------------------------------------------------------------
 // 8. RESPONSIVE & MEDIA QUERIES
 // -----------------------------------------------------------------------------
-@import "./mediaQueries/media";
+@import "layout";
 
 // -----------------------------------------------------------------------------
 // 9. KLAVOTOOLS
